--- a/app/templates/security_settings.html
+++ b/app/templates/security_settings.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% block content %}
 
-        <style>
-    .nav-link.active {
-        color: #e64758 !important;
-    }
+    <style>
+        .nav-link.active {
+            color: #e64758 !important;
+        }
     </style>
-                <nav class="navbar navbar-toggleable-md navbar-light bg-faded nav-tabs" role="tablist">
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded nav-tabs" role="tablist">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -15,8 +15,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item" >
-                    <a class="nav-link active" href="#inner_security" role="tab" data-toggle="tab">Security<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#inner_security" role="tab" data-toggle="tab">Security<span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#inner_user" role="tab" data-toggle="tab">User</a>
@@ -35,12 +36,81 @@
 
         </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_user">
-            Here will be users
+            <div class="row">
+                <div class="col-lg-12">
 
+                    <table class="table">
+                        <thead class="thead-inverse">
+                        <tr>
+                            <th>#</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Group</th>
+                            <th>Username</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for user in users %}
+                            <tr>
+                                <th scope="row">{{ user.id }}</th>
+                                <td>{{ user.first_name }}</td>
+                                <td>{{ user.last_name }}</td>
+                                <td> {% if user.usergroup_set.all.0.user_type %}
+                                    <span class="badge badge-pill badge-success"> {{ user.usergroup_set.all.0.user_type|title }}</span> {% endif %}
+                                </td>
+                                <td>@{{ user.username }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+
+
+                </div>
+            </div>
         </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_user_group">
-            User Grooups here
+            <div class="row">
+                <div class="col-lg-12">
 
+                    <table class="table">
+                        <thead class="thead-inverse">
+                        <tr>
+                            <th>#</th>
+                            <th>Group</th>
+                            <th>Receiving</th>
+                            <th>Shipping</th>
+                            <th>Mobile</th>
+                            <th>Inventory</th>
+                            <th>Item</th>
+                            <th>Reports</th>
+                            <th>Organization</th>
+                            <th>Security</th>
+                            <th>Client</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for group in groups %}
+                            <tr>
+                                <td>{{ group.id }}</td>
+                                <th scope="row">{{ group.user_group.user_type }}</th>
+                                <td>{{ group.get_receiving_display }}</td>
+                                <td>{{ group.get_shipping_display }}</td>
+                                <td>{{ group.get_mobile_display }}</td>
+                                <td>{{ group.get_inventory_display }}</td>
+                                <td>{{ group.get_items_display }}</td>
+                                <td>{{ group.get_reports_display }}</td>
+                                <td>{{ group.get_organization_display }}</td>
+                                <td>{{ group.get_security_display }}</td>
+                                <td>{{ group.get_client_display }}</td>
+
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+
+
+                </div>
+            </div>
         </div>
     </div>
 
