Some renamings as well as working on access page.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,151 +17,11 @@
             integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'css/nav.css' %}">
 
 </head>
 <body>
-<style>
-    #sidebar {
-        overflow: hidden;
-        z-index: 3;
-    }
 
-    #sidebar .list-group {
-        min-width: 400px;
-        background-color: #333;
-        min-height: 100vh;
-    }
-
-    #sidebar i {
-        margin-right: 6px;
-    }
-
-    #sidebar .list-group-item {
-        border-radius: 0;
-        background-color: #333;
-        color: #ccc;
-        border-left: 0;
-        border-right: 0;
-        border-color: #2c2c2c;
-        white-space: nowrap;
-    }
-
-    /* highlight active menu */
-    #sidebar .list-group-item:not(.collapsed) {
-        background-color: #222;
-    }
-
-    /* closed state */
-    #sidebar .list-group .list-group-item[aria-expanded="false"]::after {
-        content: " \f0d7";
-        font-family: FontAwesome;
-        display: inline;
-        text-align: right;
-        padding-left: 5px;
-    }
-
-    /* open state */
-    #sidebar .list-group .list-group-item[aria-expanded="true"] {
-        background-color: #222;
-    }
-
-    #sidebar .list-group .list-group-item[aria-expanded="true"]::after {
-        content: " \f0da";
-        font-family: FontAwesome;
-        display: inline;
-        text-align: right;
-        padding-left: 5px;
-    }
-
-    /* level 1*/
-    #sidebar .list-group .collapse .list-group-item,
-    #sidebar .list-group .collapsing .list-group-item {
-        padding-left: 20px;
-    }
-
-    /* level 2*/
-    #sidebar .list-group .collapse > .collapse .list-group-item,
-    #sidebar .list-group .collapse > .collapsing .list-group-item {
-        padding-left: 30px;
-    }
-
-    /* level 3*/
-    #sidebar .list-group .collapse > .collapse > .collapse .list-group-item {
-        padding-left: 40px;
-    }
-
-    @media (max-width: 768px) {
-        #sidebar {
-            min-width: 35px;
-            max-width: 40px;
-            overflow-y: auto;
-            overflow-x: visible;
-            transition: all 0.25s ease;
-            transform: translateX(-45px);
-            position: fixed;
-        }
-
-        #sidebar.show {
-            transform: translateX(0);
-        }
-
-        #sidebar::-webkit-scrollbar {
-            width: 0px;
-        }
-
-        #sidebar, #sidebar .list-group {
-            min-width: 35px;
-            overflow: visible;
-        }
-
-        /* overlay sub levels on small screens */
-        #sidebar .list-group .collapse.show, #sidebar .list-group .collapsing {
-            position: relative;
-            z-index: 1;
-            width: 190px;
-            top: 0;
-        }
-
-        #sidebar .list-group > .list-group-item {
-            text-align: center;
-            padding: .75rem .5rem;
-        }
-
-        /* hide caret icons of top level when collapsed */
-        #sidebar .list-group > .list-group-item[aria-expanded="true"]::after,
-        #sidebar .list-group > .list-group-item[aria-expanded="false"]::after {
-            display: none;
-        }
-    }
-
-    .collapse.show {
-        visibility: visible;
-    }
-
-    .collapsing {
-        visibility: visible;
-        height: 0;
-        -webkit-transition-property: height, visibility;
-        transition-property: height, visibility;
-        -webkit-transition-timing-function: ease-out;
-        transition-timing-function: ease-out;
-    }
-
-    .collapsing.width {
-        -webkit-transition-property: width, visibility;
-        transition-property: width, visibility;
-        width: 0;
-        height: 100%;
-        -webkit-transition-timing-function: ease-out;
-        transition-timing-function: ease-out;
-    }
-
-    .active-link {
-        background-color: white;
-        color: black;
-    !important;
-    }
-</style>
 <nav class="navbar navbar-inverse bg-inverse navbar-toggleable-md">
 
 
@@ -205,7 +66,7 @@
                 <div class="list-group border-0 card text-center text-md-left">
 
 
-                <a href="{% url 'home' %}"  {% if tab == 'home' %}
+                    <a href="{% url 'home' %}"  {% if tab == 'home' %}
                        style="background-color: darkgray; color: black;"{% endif %}
                        class="list-group-item d-inline-block collapsed active-link" data-parent="#sidebar"><i
                             class="fa fa-film"></i> <span class="d-none d-md-inline">Home</span></a>
@@ -216,34 +77,46 @@
                        class="list-group-item d-inline-block collapsed active-link" data-parent="#sidebar"><i
                             class="fa fa-film"></i> <span class="d-none d-md-inline">Receiving</span></a>
                     <a href="{% url 'shipping' %}" {% if tab == 'shipping' %}
-                       style="background-color: darkgray; color: black;"{% endif %} class="list-group-item d-inline-block collapsed"
+                       style="background-color: darkgray; color: black;"{% endif %}
+                       class="list-group-item d-inline-block collapsed"
                        data-parent="#sidebar"><i
                             class="fa fa-heart"></i> <span class="d-none d-md-inline">Shipping</span></a>
                     <a href="{% url 'mobile' %}" {% if tab == 'mobile' %}
-                       style="background-color: darkgray; color: black;"{% endif %} class="list-group-item d-inline-block collapsed" data-parent="#sidebar"><i
+                       style="background-color: darkgray; color: black;"{% endif %}
+                       class="list-group-item d-inline-block collapsed" data-parent="#sidebar"><i
                             class="fa fa-list"></i> <span class="d-none d-md-inline">Mobile</span></a>
                     <a href="{% url 'inventory' %}"  {% if tab == 'inventory' %}
-                       style="background-color: darkgray; color: black;"{% endif %} class="list-group-item d-inline-block collapsed" data-parent="#sidebar"><i
+                       style="background-color: darkgray; color: black;"{% endif %}
+                       class="list-group-item d-inline-block collapsed" data-parent="#sidebar"><i
                             class="fa fa-clock-o"></i> <span class="d-none d-md-inline">Inventory</span></a>
                     <a href="{% url 'item' %}" class="list-group-item d-inline-block collapsed" data-parent="#sidebar"
                             {% if tab == 'item' %} style="background-color: darkgray; color: black;"{% endif %}><i
                             class="fa fa-th"></i> <span class="d-none d-md-inline">Items</span></a>
                     <a href="{% url 'reports' %}" {% if tab == 'reports' %}
-                       style="background-color: darkgray; color: black;"{% endif %} class="list-group-item d-inline-block collapsed" data-parent="#sidebar"><i
+                       style="background-color: darkgray; color: black;"{% endif %}
+                       class="list-group-item d-inline-block collapsed" data-parent="#sidebar"><i
                             class="fa fa-gear"></i> <span class="d-none d-md-inline">Reports</span></a>
 
 
-{#                    <a href="{% url 'settings' %}" class="list-group-item d-inline-block collapsed"#}
-{#                       data-parent="#sidebar" {% if tab == 'settings' %}#}
-{#                       style="background-color: darkgray; color: black;"{% endif %}><i#}
-{#                            class="fa fa-calendar"></i> <span class="d-none d-md-inline">Settings</span></a>#}
+                    {#                    <a href="{% url 'settings' %}" class="list-group-item d-inline-block collapsed"#}
+                    {#                       data-parent="#sidebar" {% if tab == 'settings' %}#}
+                    {#                       style="background-color: darkgray; color: black;"{% endif %}><i#}
+                    {#                            class="fa fa-calendar"></i> <span class="d-none d-md-inline">Settings</span></a>#}
 
-                <a href="#settings"  class=" settings list-group-item d-inline-block collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-calendar"></i> <span class="d-none d-md-inline">Settings</span></a>
-                                    <div class="collapse" id="settings">
-                                        <a href="{% url 'organization_settings' %}" {% if tab == 'organization_settings' %} style="padding-left: 50px;background-color: darkgray; color: black;"{% endif %} class="list-group-item" data-parent="#menu3" style="padding-left: 50px;">Organization</a>
-                                        <a href="{% url 'security_settings' %}" {% if tab == 'security_settings' %} style="padding-left: 50px;background-color: darkgray; color: black;"{% endif %} class="list-group-item" data-parent="#menu3" style="padding-left: 50px;">Security</a>
-                                        <a href="{% url 'client_settings' %}" {% if tab == 'client_settings' %} style="padding-left: 50px;background-color: darkgray; color: black;"{% endif %} class="list-group-item" data-parent="#menu3" style="padding-left: 50px;">Client</a>
-                                    </div>
+                    <a href="#settings" class=" settings list-group-item d-inline-block collapsed"
+                       data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i
+                            class="fa fa-calendar"></i> <span class="d-none d-md-inline">Settings</span></a>
+                    <div class="collapse" id="settings">
+                        <a href="{% url 'organization_settings' %}" {% if tab == 'organization_settings' %}
+                           style="padding-left: 50px;background-color: darkgray; color: black;"{% endif %}
+                           class="list-group-item" data-parent="#menu3" style="padding-left: 50px;">Organization</a>
+                        <a href="{% url 'security_settings' %}" {% if tab == 'security_settings' %}
+                           style="padding-left: 50px;background-color: darkgray; color: black;"{% endif %}
+                           class="list-group-item" data-parent="#menu3" style="padding-left: 50px;">Security</a>
+                        <a href="{% url 'client_settings' %}" {% if tab == 'client_settings' %}
+                           style="padding-left: 50px;background-color: darkgray; color: black;"{% endif %}
+                           class="list-group-item" data-parent="#menu3" style="padding-left: 50px;">Client</a>
+                    </div>
 
 
                 </div>
@@ -254,13 +127,13 @@
 
 {% endif %}
 <script>
-$( document ).ready(function() {
-    if (['organization_settings','security_settings', 'client_settings'].indexOf( '{{ tab }}' ) > -1){
-    console.log( "ready!" );
-    $('.settings').click()
-    }
+    $(document).ready(function () {
+        if (['organization_settings', 'security_settings', 'client_settings'].indexOf('{{ tab }}') > -1) {
+            console.log("ready!");
+            $('.settings').click()
+        }
 
-});
+    });
 </script>
 {% block content %}{% endblock content %}
 </body>
