--- a/app/templates/settings_security.html
+++ b/app/templates/settings_security.html
@@ -64,7 +64,6 @@
                         </tbody>
                     </table>
 
-
                 </div>
             </div>
         </div>
@@ -92,16 +91,53 @@
                         {% for group in groups %}
                             <tr>
                                 <td>{{ group.id }}</td>
-                                <th scope="row">{{ group.user_group.user_type }}</th>
-                                <td>{{ group.get_receiving_display }}</td>
-                                <td>{{ group.get_shipping_display }}</td>
-                                <td>{{ group.get_mobile_display }}</td>
-                                <td>{{ group.get_inventory_display }}</td>
-                                <td>{{ group.get_items_display }}</td>
-                                <td>{{ group.get_reports_display }}</td>
-                                <td>{{ group.get_organization_display }}</td>
-                                <td>{{ group.get_security_display }}</td>
-                                <td>{{ group.get_client_display }}</td>
+                                <th scope="row">
+                                    {{ group.user_group.user_type }}
+                                </th>
+                                <td>
+
+                                    <i class="fa {% if group.receiving == '0' %}fa-times{% elif group.receiving == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+                                </td>
+                                <td>
+                                    <i class="fa {% if group.receiving == '0' %}fa-times{% elif group.receiving == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+
+                                    {{ group.get_shipping_display }}</td>
+                                <td>
+                                    <i class="fa {% if group.receiving == '0' %}fa-times{% elif group.receiving == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+
+                                    {{ group.get_mobile_display }}</td>
+                                <td>
+                                    <i class="fa {% if group.inventory == '0' %}fa-times{% elif group.inventory == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+
+                                    </td>
+                                <td>
+                                    <i class="fa {% if group.items == '0' %}fa-times{% elif group.items == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+
+                                    {{ group.get_items_display }}</td>
+                                <td>
+                                    <i class="fa {% if group.reports == '0' %}fa-times{% elif group.reports == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+
+                                    </td>
+                                <td>
+
+                                    <i class="fa {% if group.organization == '0' %}fa-times{% elif group.organization == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+                            </td>
+                                <td>
+                                    <i class="fa {% if group.security == '0' %}fa-times{% elif group.security == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+                                    {{ group.get_security_display }}</td>
+
+                                <td>
+                                    <i class="fa {% if group.client == '0' %}fa-times{% elif group.client == 'R' %}fa-registered{% else %}fa-pencil-alt{% endif %}"
+                                       style="font-size:28px;color: red;"></i>
+                            </td>
 
                             </tr>
                         {% endfor %}
