--- a/app/templates/settings_security.html
+++ b/app/templates/settings_security.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    {% load bootstrap3 %}
 
     <style>
         .nav-link.active {
@@ -67,10 +68,42 @@
                 </div>
             </div>
         </div>
+
         <div role="tabpanel" class="tab-pane fade" id="inner_user_group">
             <div class="row">
-                <div class="col-lg-12">
+                {% for form in form_array %}
 
+                    <div class="modal fade" id="exampleModal_{{ form.id }}" tabindex="-1" role="dialog"
+                         aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Edit Permissions</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form role="form" method="post">
+                                        {% csrf_token %}
+                                        <div class="login-form">
+                                            <h2 class="heading">Permission</h2>
+                                            {% bootstrap_form form.form %}
+                                            {% buttons %}
+                                                <button type="submit" class="btn btn-success">Submit <span
+                                                        class="glyphicon glyphicon-log-in"></span></button>
+                                                <input type="hidden" name="id" value="{{ form.id }}"/>
+                                            {% endbuttons %}
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                {% endfor %}
+
+                <div class="col-lg-12">
                     <table class="table">
                         <thead class="thead-inverse">
                         <tr>
@@ -85,6 +118,7 @@
                             <th>Organization</th>
                             <th>Security</th>
                             <th>Client</th>
+                            <th></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -123,6 +157,12 @@
 
                                 <td>
                                     {% include "settings_group_access_style.html" with tab_value=group.client %}
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                                            data-target="#exampleModal_{{ group.id }}">
+                                        Edit
+                                    </button>
                                 </td>
 
                             </tr>
