--- a/app/templates/settings_security.html
+++ b/app/templates/settings_security.html
@@ -38,6 +38,7 @@
         </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_user">
             <div class="row">
+                <a href="{% url 'add_user' %}" class="btn btn-primary"> Add User</a>
                 <div class="col-lg-12">
                     <div class="col-lg-12">
                         {% for user in users %}
@@ -70,6 +71,36 @@
                             </div>
 
                         {% endfor %}
+                    </div>
+
+                    <div class="col-lg-12">
+
+                        <div class="modal fade" id="useradd" tabindex="-1" role="dialog"
+                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Add User</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form role="form" method="post" action="{% url 'add_user' %}">
+                                            {% csrf_token %}
+                                            <div class="login-form">
+                                                <h2 class="heading">Add</h2>
+                                                {% bootstrap_form user_form %}
+                                                {% buttons %}
+                                                    <button type="submit" class="btn btn-success">Submit <span
+                                                            class="glyphicon glyphicon-log-in"></span></button>
+                                                {% endbuttons %}
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
 
